--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
     name: Redis
     code: REDIS
-    notify: appz@ecloudcontrol.com
+    notify: svarkey@eclodcontrol.com
 build:
     version: 6.2
     env: DEV
@@ -10,7 +10,7 @@ build:
     image_template: redis-6.2
     
 deploy:
-    context: alpha/DEV
+    context: shonecloudcontrol/DEV
     replicas: 1
     type: statefulset
     port:
